...
    };
    setUploading(true);
    const error = await sendRequest(order);
    if (error) {
      Toast.show({ title: "Error", textBody: error.message });
    } else {
      Toast.show({ title: "Request Sent", type: ALERT_TYPE.SUCCESS });
    }
    setUploading(false);
    close();
  }

  useEffect(() => {
...
              numberOfLines={5}
              onChangeText={(text) => setDescription(text)}
              styles={{ width: "100%", marginBottom: 20 }}
              inputStyles={{ paddingVertical: 10 }}
            />
            <BaseButton
              label="Send Request"
              loading={uploading}
              onPress={requestOrder}
            />
          </View>
        </View>
      </BottomSheet>
...
