...
              fontSize: 24,

              fontWeight: "bold",
              marginTop: 10,
            }}
          >
            Driver
          </BaseText>
        </Pressable>

        <Pressable
          onPress={() => goToAccount("/mechanic/auth")}
          style={{
...
