...
          style={{
            fontSize: 28,
            marginTop: 5,
            fontWeight: "bold",
          }}
        >
          Login
        </BaseText>
      </View>
      <View
        style={{
          ...RootStyles.card,
        }}
...
