...
            width: "100%",
          }}
        >
          {mechanic.availableDays.join(" - ")}
        </BaseText>
        <BaseButton
          label="Request"
          onPress={() => selectMechanic(mechanic)}
          variant="secondary"
        />
      </Animated.View>
    </TouchableOpacity>
  );
...
